@@ -200,25 +200,8 @@ class ObjectTree extends JTree
                     addToPopup(actions.get(CopySimpleObjectNameAction.class));
                     addToPopup(actions.get(CopyQualifiedObjectNameAction.class));
 
-                    // Mouse listener used to display popup menu.
-                    addMouseListener(new MouseAdapter()
-                    {
-                        public void mousePressed(MouseEvent evt)
-                        {
-                            if (evt.isPopupTrigger())
-                            {
-                                showPopup(evt.getX(), evt.getY());
-                            }
-                        }
-                        public void mouseReleased(MouseEvent evt)
-                        {
-                            if (evt.isPopupTrigger())
-                            {
-                                showPopup(evt.getX(), evt.getY());
-                            }
-                        }
-                    });
 
+                  addMouseListener(new ObjectTreeMouseListener());
                   setCellRenderer(new ObjectTreeCellRenderer(_model, _session));
                   ObjectTree.this.refresh(false);
                   ObjectTree.this.setSelectionPath(ObjectTree.this.getPathForRow(0));
@@ -229,6 +212,42 @@ class ObjectTree extends JTree
 
 
    }
+   
+   // Mouse listener used to display popup menu.
+   private class ObjectTreeMouseListener extends MouseAdapter {
+      public void mousePressed(MouseEvent evt)
+      {      	
+      	 
+          if (evt.isPopupTrigger())
+          {
+    			// If the user wants to select for Right mouse clicks then change the selection before popup 
+         	// appears
+         	 if (_session.getApplication().getSquirrelPreferences().getSelectOnRightMouseClick()) {         	 
+	         	 TreePath path = ObjectTree.this.getPathForLocation(evt.getX(), evt.getY());
+	         	 TreePath[] selectedPaths = ObjectTree.this.getSelectionPaths();
+	         	 boolean alreadySelected = false;
+	         	 for (TreePath selectedPath : selectedPaths) {
+	         		 if (path != null && path.equals(selectedPath)) {
+	         			 alreadySelected = true;
+	         			 break;
+	         		 }
+	         	 }
+	         	 if (!alreadySelected) {
+	         		 ObjectTree.this.setSelectionPath(path);
+	         	 }
+         	 }
+             showPopup(evt.getX(), evt.getY());
+          }
+      }
+      public void mouseReleased(MouseEvent evt)
+      {
+          if (evt.isPopupTrigger())
+          {
+              showPopup(evt.getX(), evt.getY());
+          }
+      }   	
+   }
+   
 	/**
 	 * Component has been added to its parent.
 	 */
@@ -434,7 +453,7 @@ class ObjectTree extends JTree
       // Go through each child of the parent and see if it was previously
 		// expanded. If it was recursively call this method in order to expand
 		// the child.
-          
+      @SuppressWarnings("unchecked")
       Enumeration<ObjectTreeNode> childEnumeration = 
           (Enumeration<ObjectTreeNode>) node.children();
 		Iterator<ObjectTreeNode> it = 
